[gd_scene load_steps=7 format=3 uid="uid://c1lb8522d03uw"]

[ext_resource type="Script" path="res://ui/port_settings.gd" id="1_20mbq"]
[ext_resource type="SystemFont" uid="uid://clgxx8np5xv0c" path="res://ui/mono_font.tres" id="2_fomup"]
[ext_resource type="Texture2D" uid="uid://cqxdw0qdocoqv" path="res://ui/passive.svg" id="2_ns4jf"]
[ext_resource type="Texture2D" uid="uid://6aqgjod0bdv4" path="res://ui/unlink.svg" id="3_t7d0a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kboym"]
content_margin_left = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.498039)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hethk"]

[node name="PortOptions" type="Panel"]
offset_right = 48.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kboym")
script = ExtResource("1_20mbq")

[node name="MarginContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="PropertySwitch" type="Button" parent="MarginContainer"]
offset_right = 36.0
offset_bottom = 21.0
grow_horizontal = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.815686, 0.815686, 0.815686, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.376471)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_fomup")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hethk")
text = "C"
flat = true
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_top = 21.0
offset_right = 36.0
offset_bottom = 36.0
size_flags_vertical = 3
alignment = 1

[node name="ModeSwitch" type="Button" parent="MarginContainer/HBoxContainer"]
offset_right = 16.0
offset_bottom = 15.0
grow_vertical = 0
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.815686, 0.815686, 0.815686, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_fomup")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hethk")
icon = ExtResource("2_ns4jf")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ChainedSwitch" type="Button" parent="MarginContainer/HBoxContainer"]
offset_left = 20.0
offset_right = 36.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.815686, 0.815686, 0.815686, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_fomup")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hethk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hethk")
icon = ExtResource("3_t7d0a")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/PropertySwitch" to="." method="_on_property_switch_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ModeSwitch" to="." method="_on_mode_switch_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ChainedSwitch" to="." method="_on_chained_switch_pressed"]
